src/objects/Metadata_Site_Rule__c.object
<CustomObject>
    <description>US402

When contact us case is submitted the contact will get an auto-acknowledgement message (one for default, one for pampers will be configured) - custom setting - Notification Message
Email message content will be appended to case as an email message.
Task of type Consumer activity is added to case and assigned to &quot;data owner email&quot;
When certain contact us cases are submitted they will either be auto responded to with a specific template or forwarded to a 3rd party with a specific template - configurable in metadata site rule object.
Message is appended to case as an email message
Case is closed and assigned to integration user.</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto-response</fullName>
                </value>
                <value>
                    <fullName>Third Party Email Forward</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutoResponse_FromName__c</fullName>
        <inlineHelpText>Displays sender name in the incoming email.</inlineHelpText>
        <label>AutoResponse FromName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoResponse_Template_Name__c</fullName>
        <inlineHelpText>Use Template Unique Name (the one that has no spaces in name)</inlineHelpText>
        <label>AutoResponse Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Ariel</fullName>
                </value>
                <value>
                    <fullName>Febreze</fullName>
                </value>
                <value>
                    <fullName>Gillette</fullName>
                </value>
                <value>
                    <fullName>Max Factor</fullName>
                </value>
                <value>
                    <fullName>Pampers</fullName>
                </value>
                <value>
                    <fullName>Pringles</fullName>
                </value>
                <value>
                    <fullName>Tide</fullName>
                </value>
                <value>
                    <fullName>P&amp;G</fullName>
                </value>
                <value>
                    <fullName>CoverGirl</fullName>
                </value>
                <value>
                    <fullName>Dawn</fullName>
                </value>
                <value>
                    <fullName>Pantene</fullName>
                </value>
                <value>
                    <fullName>Swiffer</fullName>
                </value>
                <value>
                    <fullName>Gain</fullName>
                </value>
                <value>
                    <fullName>Crest</fullName>
                </value>
                <value>
                    <fullName>Old Spice</fullName>
                </value>
                <value>
                    <fullName>Herbal Essences</fullName>
                </value>
                <value>
                    <fullName>Downy</fullName>
                </value>
                <value>
                    <fullName>Mr Clean</fullName>
                </value>
                <value>
                    <fullName>Luvs</fullName>
                </value>
                <value>
                    <fullName>Bounce</fullName>
                </value>
                <value>
                    <fullName>Secret</fullName>
                </value>
                <value>
                    <fullName>Bounty</fullName>
                </value>
                <value>
                    <fullName>Sebastian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States of America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <inlineHelpText>Only enter org wide emails. Entering other emails will have no effect and emails will be sent from Site Owner email address.</inlineHelpText>
        <label>AutoResponse From Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <inlineHelpText>Insert keywords separated by comma (Ex: Sample, Coupon, ....). Keywords are case insensitive. &apos;SAMPLE&apos; and &apos;sample&apos; are treated as same.</inlineHelpText>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chinese-T</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English-GB</fullName>
                </value>
                <value>
                    <fullName>English-US</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Kazakh</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Maltese</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Writing__c</fullName>
        <description>1 - Send a testimonial 
2 - Ask a question 
3 - Product availability / Where to buy 
4 - Report a problem 
5 - Coupons, Samples, Sponsorship 
6 - Promotions</description>
        <inlineHelpText>1 - Send a testimonial 
2 - Ask a question 
3 - Product availability / Where to buy 
4 - Report a problem 
5 - Coupons, Samples, Sponsorship 
6 - Promotions</inlineHelpText>
        <label>Reason for Writing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_Email_Address__c</fullName>
        <inlineHelpText>Email address of the third party (recipient). Not used for auto-response.</inlineHelpText>
        <label>Third Party Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Third_Party_Email_Subject__c</fullName>
        <label>Third Party Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Metadata Site Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AutoResponse_Template_Name__c</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Brand__c</columns>
        <columns>Language__c</columns>
        <columns>Priority__c</columns>
        <columns>Action__c</columns>
        <columns>Third_Party_Email_Address__c</columns>
        <columns>Keywords__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Auto_responses</fullName>
        <columns>NAME</columns>
        <columns>AutoResponse_Template_Name__c</columns>
        <columns>Brand__c</columns>
        <columns>Country__c</columns>
        <columns>Keywords__c</columns>
        <columns>Reason_for_Writing__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Action__c</field>
            <operation>equals</operation>
            <value>Auto-response</value>
        </filters>
        <filters>
            <field>AutoResponse_Template_Name__c</field>
            <operation>contains</operation>
            <value>Tide</value>
        </filters>
        <label>Auto responses</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Auto_responses_Pampers</fullName>
        <columns>NAME</columns>
        <columns>AutoResponse_Template_Name__c</columns>
        <columns>Brand__c</columns>
        <columns>Country__c</columns>
        <columns>Keywords__c</columns>
        <columns>Reason_for_Writing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Action__c</field>
            <operation>equals</operation>
            <value>Auto-response</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Pampers</value>
        </filters>
        <label>Auto responses Pampers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Third_Party_Forward</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Brand__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Third_Party_Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Action__c</field>
            <operation>equals</operation>
            <value>Third Party Email Forward</value>
        </filters>
        <label>Third Party Forward</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MAR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Site Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>